src/test/deca/context/invalid/uncompatible_assignement.deca
// Description:
//    assignement incompatible
//
// Resultats:
//    Uncompatible assignment
//
// Historique:
//    cree le 08/01/2023

{
    int a;
    a= 1.68;
}
